samples/_failures_safe/1761273189_0f09d7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9dba9a1d.c: In function ‘main’:
./samples/SAFE/__tmp_9dba9a1d.c:195:5: error: expected declaration or statement at end of input
  195 |     if (len > 0 && input[len - 1] == '\n') {
      |     ^~
./samples/SAFE/__tmp_9dba9a1d.c:195:5: error: expected declaration or statement at end of input
